# chatbot_db

./: .env  .gitattributes  .gitignore  db.ps1  flatten_csv.py  requirements.txt  sample_dataset.py
app/: create_index.py  db.py  generate_embeddings.py  main.py  test.py
app/agent/: answerer.py  orchestrator.py  planner.py
app/config/: err_meta.yml
app/rag/: loader.py  vector_store.py
app/search/: run_query.py
app/tools/: asset_types.py  baseline.py  dynamic_projection.py  misconfiguration.py  misconfiguration_ml.py  sensor_tools.py  topology.py
app/utils/: error_meta.py  serialize.py
backend/: pyproject.toml  requirements.txt
backend/src/backend/: db.py  main.py
backend/src/backend/agent/: orchestrator.py  state.py
backend/src/backend/rag/: loader.py  vector_store.py
backend/src/backend/tools/: baseline.py  dynamic_projection.py  misconfiguration.py  misconfiguration_ml.py  sensor_tools.py  topology.py
backend/src/backend/utils/: serialize.py  slugify_company.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/others/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AG_Grid.jsx  AccordionGroup.jsx  AssetDetailModal.jsx  Card.jsx  Chat.jsx  Dashboard.jsx  DataTable.jsx  MisconfigDashboard.jsx  SensorsDashboard.jsx  Sidebar.jsx  SummaryCard.jsx  Tanstack.jsx  Topology.jsx  columns.js
frontend/src/store/: tableStore.js  useTopologyStore.js
