[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mathieu", email = "mathieu.zilli@student.icareweb.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ace-tools==0.0",
    "cachetools==6.1.0",
    "cmake==4.0.3",
    "diskcache==5.6.3",
    "dotenv==0.9.9",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.14",
    "itsdangerous==2.2.0",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.27",
    "ninja==1.11.1.4",
    "pandas==2.3.1",
    "pip-check-reqs==2.5.5",
    "pip-chill==1.0.3",
    "pipreqs==0.5.0",
    "pyarrow==21.0.0",
    "pymongo==4.13.2",
    "sentence-transformers==5.0.0",
    "tinycss2==1.4.0",
    "uvicorn==0.35.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
